<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/bb"
    tools:context=".DetailedDiseaseInformation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/crop_ccr"
            android:background="@drawable/roundstyle"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cover"/>

        <TextView
            android:id="@+id/crop_disease"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/crop_disease"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            android:lines="1" />

        <TextView
            android:id="@+id/crop_scientific"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/crop_disease_scientific_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            android:lines="1"/>

        <TextView
            android:id="@+id/crop_what_why"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="What is"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            android:lines="1" />

        <TextView
            android:id="@+id/detail_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:layout_gravity="center_vertical|end"
            android:text="@string/crop_disease_detailed_information"
            android:textColor="@color/black"
            android:isScrollContainer="true"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corner"/>

        <TextView
            android:id="@+id/crop_how"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="How to Identify"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            android:lines="1" />

        <TextView
            android:id="@+id/detail_info_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:layout_gravity="center_vertical|end"
            android:text="@string/crop_disease_detailed_information"
            android:textColor="@color/black"
            android:isScrollContainer="true"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corner"/>

        <TextView
            android:id="@+id/crop_imp_mngmt"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Importance and Management"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            android:lines="1"/>

        <TextView
            android:id="@+id/detail_info_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical|end"
            android:text="@string/crop_disease_detailed_information"
            android:textColor="@color/black"
            android:padding="10dp"
            android:isScrollContainer="true"
            android:textSize="18sp"
            android:background="@drawable/round_corner"/>

        <TextView
            android:id="@+id/cycle_name"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="Disease Cycle"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            android:lines="1"/>

        <ImageView
            android:id="@+id/disease_cycle"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/crop_ccr"
            android:background="@drawable/roundstyle"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cycle"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</ScrollView>